Add scrolling ticker with copyable CA

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
             <div class="scanline-overlay"></div>
             
             <div id="ui-layer">
+                <div class="ticker-wrap">
+                    <div class="ticker-move">
+                        <div class="ticker-item">BAGS TOWN • CA: <span class="copy-ca" data-val="4Hpz2BSjcsr6sdE5vuk888AHdcgAjCghBavcZS2ZBAGS">4Hpz2BSjcsr6sdE5vuk888AHdcgAjCghBavcZS2ZBAGS</span></div>
+                        <div class="ticker-item">BAGS TOWN • CA: <span class="copy-ca" data-val="4Hpz2BSjcsr6sdE5vuk888AHdcgAjCghBavcZS2ZBAGS">4Hpz2BSjcsr6sdE5vuk888AHdcgAjCghBavcZS2ZBAGS</span></div>
+                    </div>
+                </div>
                 <div class="navbar">
                     <div class="logo">
                         <h1>BAGS TOWN</h1>
